# spectre

./: AderDgMatrices.ipynb  BjorhusImpl_8hpp_source.html  BouncingBlackHole_8hpp_source.html  CMakeLists.txt  CovariantDerivOfExtrinsicCurvature_8hpp_source.html  DampedHarmonic_8hpp_source.html  DampedWaveHelpers_8hpp_source.html  DerivSpatialMetric_8hpp_source.html  DuDtTempTags_8hpp_source.html  Evolution_2Systems_2GeneralizedHarmonic_2BoundaryConditions_2Factory_8hpp_source.html  Evolution_2Systems_2GeneralizedHarmonic_2BoundaryConditions_2RegisterDerivedWithCharm_8hpp_source.html  Evolution_2Systems_2GeneralizedHarmonic_2Equations_8hpp_source.html  Evolution_2Systems_2GeneralizedHarmonic_2Initialize_8hpp_source.html  Evolution_2Systems_2GeneralizedHarmonic_2TagsDeclarations_8hpp_source.html  Evolution_2Systems_2GeneralizedHarmonic_2Tags_8hpp_source.html  EvolveGeneralizedHarmonicFwd_8hpp_source.html  EvolveGeneralizedHarmonicWithHorizonFwd_8hpp_source.html  EvolveGeneralizedHarmonicWithHorizon_8hpp_source.html  EvolveGhValenciaDivCleanFwd_8hpp_source.html  EvolveGhValenciaDivCleanWithHorizonFwd_8hpp_source.html  GaugeSource_8hpp_source.html  Gauges_8hpp_source.html  GeneralizedHarmonic_2BoundaryConditions_2DirichletAnalytic_8hpp_source.html  GeneralizedHarmonic_2BoundaryConditions_2Outflow_8hpp_source.html  GeneralizedHarmonic_2Characteristics_8hpp_source.html  GeneralizedHarmonic_2Christoffel_8hpp_source.html  GeneralizedHarmonic_2Constraints_8hpp_source.html  GeneralizedHarmonic_2ExtrinsicCurvature_8hpp_source.html  GeneralizedHarmonic_2Ricci_8hpp_source.html  GeneralizedHarmonic_2System_8hpp_source.html  GeneralizedHarmonic_2TimeDerivativeOfSpacetimeMetric_8hpp_source.html  GeneralizedHarmonic_2TimeDerivative_8hpp_source.html  GeneralizedHarmonic_2UpwindPenaltyCorrection_8hpp_source.html  Phi_8hpp_source.html  Pi_8hpp_source.html  ScalarWave3dProfile.yaml  SpacetimeDerivOfDetSpatialMetric_8hpp_source.html  SpacetimeDerivOfNormOfShift_8hpp_source.html  SpacetimeDerivativeOfSpacetimeMetric_8hpp_source.html  SpatialDerivOfLapse_8hpp_source.html  (+230 more)
.github/workflows/: BuildDockerContainer.yaml  DeployStaticExecutables.yaml  Tests.yaml
cmake/: EnableWarnings.cmake  SetupBlaze.cmake  SetupBoost.cmake  SetupCxxFlags.cmake  SetupFormaline.cmake  SetupGsl.cmake  SetupKokkos.cmake  SetupProfiling.cmake  SetupStl.cmake  SetupXsimd.cmake  SpectreAddInterfaceLibraryHeaders.cmake  SpectreCheckTargetDependencies.cmake
containers/: Dockerfile.buildenv
doc_coverage/: index-sort-l.html  index.html
doc_coverage/ApparentHorizons/: ChangeCenterOfStrahlkorper.hpp.gcov.html  ComputeExcisionBoundaryVolumeQuantities.hpp.gcov.html  ComputeHorizonVolumeQuantities.hpp.gcov.html  ComputeItems.hpp.gcov.html  FastFlow.hpp.gcov.html  HorizonAliases.hpp.gcov.html  ObserveCenters.hpp.gcov.html  SpherepackIterator.hpp.gcov.html  Strahlkorper.hpp.gcov.html  StrahlkorperCoordsInDifferentFrame.hpp.gcov.html  StrahlkorperGr.hpp.gcov.html  StrahlkorperInDifferentFrame.hpp.gcov.html  Tags.hpp.gcov.html  TagsDeclarations.hpp.gcov.html  TagsTypeAliases.hpp.gcov.html  TimeDerivStrahlkorper.hpp.gcov.html  YlmSpherepack.hpp.gcov.html  YlmSpherepackHelper.hpp.gcov.html  index-sort-l.html  index.html
doc_coverage/ControlSystem/: Averager.hpp.gcov.html  CalculateMeasurementTimescales.hpp.gcov.html  Component.hpp.gcov.html  Controller.hpp.gcov.html  DataVectorHelpers.hpp.gcov.html  Event.hpp.gcov.html  ExpirationTimes.hpp.gcov.html  FunctionOfTimeUpdater.hpp.gcov.html  Metafunctions.hpp.gcov.html  (+9 more)
docs/: References.bib
py/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_19.js  classes_2.js  (+183 more)
src/: CMakeLists.txt
src/ControlSystem/: CMakeLists.txt
src/ControlSystem/Measurements/: BNSCenterOfMass.cpp  CMakeLists.txt
src/Domain/Amr/: CMakeLists.txt
src/Elliptic/DiscontinuousGalerkin/: CMakeLists.txt
src/Elliptic/DiscontinuousGalerkin/SubdomainOperator/: CMakeLists.txt
src/Elliptic/SubdomainPreconditioners/: CMakeLists.txt
src/Evolution/Executables/SphericalCollapse/: CMakeLists.txt  SphericalCollapse.cpp
src/Evolution/Systems/Burgers/: CMakeLists.txt
src/Evolution/Systems/Cce/: CMakeLists.txt
src/Evolution/Systems/Cce/Components/: CharacteristicEvolution.hpp
src/Evolution/Systems/CurvedScalarWave/: CMakeLists.txt
src/NumericalAlgorithms/DiscontinuousGalerkin/: CMakeLists.txt
src/ParallelAlgorithms/Actions/: CMakeLists.txt
src/ParallelAlgorithms/Amr/Criteria/: CMakeLists.txt
src/ParallelAlgorithms/ApparentHorizonFinder/: CMakeLists.txt
src/ParallelAlgorithms/Events/: CMakeLists.txt  ObserveFields.hpp  ObserveNorms.hpp  ObserveTimeStep.hpp
src/PointwiseFunctions/AnalyticSolutions/Elasticity/: CMakeLists.txt
src/PointwiseFunctions/Elasticity/ConstitutiveRelations/: CMakeLists.txt
tests/Unit/Framework/: ActionTesting.hpp  CMakeLists.txt  CheckWithRandomValues.hpp
tests/Unit/Helpers/ControlSystem/: CMakeLists.txt
tests/Unit/Helpers/DataStructures/: CMakeLists.txt
tests/Unit/Helpers/Domain/: CMakeLists.txt
tests/Unit/Helpers/Domain/Amr/: CMakeLists.txt
tests/Unit/Helpers/Domain/BoundaryConditions/: CMakeLists.txt
tests/Unit/Helpers/Domain/CoordinateMaps/: TestMapHelpers.hpp
tests/Unit/Helpers/Domain/Structure/: CMakeLists.txt
tests/Unit/Helpers/Evolution/Systems/Cce/: CMakeLists.txt
tests/Unit/Helpers/Evolution/Systems/Cce/AnalyticSolutions/: CMakeLists.txt
tests/Unit/Helpers/Evolution/Systems/CurvedScalarWave/: CMakeLists.txt
tests/Unit/Helpers/ParallelAlgorithms/EventsAndDenseTriggers/DenseTriggers/: CMakeLists.txt
tools/: CharmTraceReplacements.json  FileTestDefs.sh
(+2873 files in other folders)
